src/test/ui/parser/macro-bad-delimiter-ident.stderr
error: expected `(` or `{`, found `<`
  --> $DIR/macro-bad-delimiter-ident.rs:4:14
   |
LL |     foo! bar < //~ ERROR expected `(` or `{`, found `<`
   |              ^ expected `(` or `{`

error: aborting due to previous error

