src/test/ui/parser/macro-bad-delimiter-ident.rs
// compile-flags: -Z parse-only

fn main() {
    foo! bar < //~ ERROR expected `(` or `{`, found `<`
}
